Move away from LinkedList. Note this is a breaking change, and not ready to be merged as-is.